  (Ignacio Vera via Mike Drob)

* LUCENE-9372: Fix paths for cygwin/msys before gradle wrapper jar lookup.
  (Peter Barna)

* LUCENE-9365: FuzzyQuery was missing matches when prefix length was equal to the term length
  (Mark Harwood, Mike Drob)

* LUCENE-9580: Fix bug in the polygon tessellator when introducing collinear edges during polygon 
  splitting. (Ignacio Vera)  

Changes in Backwards Compatibility Policy

* LUCENE-9669: DirectoryReader#open now accepts an argument to open indices created with versions
  older than N-1. Lucene now can open indices created with a major version of N-2 in read-only mode.
  Opening an index created with a major version of N-2 with an IndexWriter is not supported.
  Further does lucene only support file-format compatibilty which enables reading of old indices while
  semantic changes like analysis or certain encoding on top of the file format are only supported on 
  a best effort basis. (Simon Willnauer)  

Other

* LUCENE-9570, LUCENE-9564: Apply google java format and enforce it on source Java files.
  Review diffs and correct automatic formatting oddities. (Erick Erickson,
  Bruno Roustant, Dawid Weiss)

* LUCENE-9631: Properly override slice() on subclasses of OffsetRange. (Dawid Weiss)

* LUCENE-9391: Upgrade HPPC to 0.8.2. (Haoyu Zhai)

* LUCENE-8768: Fix Javadocs build in Java 11. (Namgyu Kim)

* LUCENE-9092: upgrade randomizedtesting to 2.7.5 (Dawid Weiss)

* LUCENE-8656: Deprecations in FuzzyQuery and get compiler warnings out of
  queryparser code (Alan Woodward, Erick Erickson)

* LUCENE-9344: Convert .txt files to properly formatted .md files. (Tomoko Uchida, Uwe Schindler)

* LUCENE-9267: Update MatchingQueries documentation to correct
  time unit. (Pierre-Luc Perron via Mike Drob)

* LUCENE-9411: Fail complation on warnings, 9x gradle-only (Erick Erickson, Dawid Weiss)
  Deserves mention here as well as Lucene CHANGES.txt since it affects both.
